<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/ltr"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"/>

        <View style="@style/Widget.RoundedBackground.Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"/>

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/ltr_multi"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"/>

        <View style="@style/Widget.RoundedBackground.Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"/>

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/ltr_long"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"
            app:roundedTextDrawable="@drawable/rounded"
            app:roundedTextDrawableLeft="@drawable/rounded_left"
            app:roundedTextDrawableMid="@drawable/rounded_mid"
            app:roundedTextDrawableRight="@drawable/rounded_right"/>

        <View style="@style/Widget.RoundedBackground.Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"/>

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/rtl"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"/>

        <View style="@style/Widget.RoundedBackground.Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"/>

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/rtl_multi"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"/>

        <View style="@style/Widget.RoundedBackground.Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"/>

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/lang1"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"/>

        <View style="@style/Widget.RoundedBackground.Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"/>

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/lang2"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"/>

        <View style="@style/Widget.RoundedBackground.Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"/>

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/lang3"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"/>

        <View style="@style/Widget.RoundedBackground.Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"/>

        <com.android.example.text.styling.roundedbg.RoundedBgTextView
            android:text="@string/lang4"
            style="@style/Widget.RoundedBackground.SampleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textViewMargin"/>

    </LinearLayout>


</ScrollView>
